--- a/assets/css/truman_youtube_display.css
+++ b/assets/css/truman_youtube_display.css
@@ -1,25 +1,21 @@
-/*
-Reference: http://avexdesigns.com/responsive-youtube-embed/
-*/
-
+/* Reference: http://avexdesigns.com/responsive-youtube-embed/ */
 
 .vid {
-    position: relative; 
-    padding-bottom: 56.25%;
-    padding-top: 30px; height: 0; overflow: hidden;
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px; height: 0; overflow: hidden;
 }
- 
+
 .vid iframe,
 .vid object,
 .vid embed,
 .vid img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
-
 
 .vid span.play {
 	position: relative;
@@ -35,8 +31,8 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
 
 .vid .vid-caption {
 	position: absolute;
-	bottom: 0px;
-	left: 0px;
+	bottom: 0;
+	left: 0;
 	color: #ffffff;
 	text-align: left;
 	padding: 5px;
@@ -48,4 +44,3 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
 	opacity: 1;
 	filter:alpha(opacity=100);
 }
-
