--- a/assets/scss/magnific-popup.scss
+++ b/assets/scss/magnific-popup.scss
@@ -1,4 +1,4 @@
-/* Magnific Popup CSS */
+// Magnific Popup CSS
 .mfp-bg {
 	top: 0;
 	left: 0;
@@ -34,13 +34,13 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-}
 
-.mfp-container:before {
-	content: '';
-	display: inline-block;
-	height: 100%;
-	vertical-align: middle;
+	&:before {
+		content: '';
+		display: inline-block;
+		height: 100%;
+		vertical-align: middle;
+	}
 }
 
 .mfp-align-top .mfp-container:before {
@@ -56,7 +56,8 @@
 	z-index: 1045;
 }
 
-.mfp-inline-holder .mfp-content, .mfp-ajax-holder .mfp-content {
+.mfp-inline-holder .mfp-content,
+.mfp-ajax-holder .mfp-content {
 	width: 100%;
 	cursor: auto;
 }
@@ -65,7 +66,8 @@
 	cursor: progress;
 }
 
-.mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
+.mfp-zoom-out-cur,
+.mfp-zoom-out-cur .mfp-image-holder .mfp-close {
 	cursor: -moz-zoom-out;
 	cursor: -webkit-zoom-out;
 	cursor: zoom-out;
@@ -82,7 +84,8 @@
 	cursor: auto;
 }
 
-.mfp-close, .mfp-arrow, .mfp-preloader, .mfp-counter {
+.mfp-close,
+.mfp-arrow, .mfp-preloader, .mfp-counter {
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	user-select: none;
@@ -106,12 +109,14 @@
 	left: 8px;
 	right: 8px;
 	z-index: 1044;
-}
-.mfp-preloader a {
-	color: #cccccc;
-}
-.mfp-preloader a:hover {
-	color: white;
+
+	a {
+		color: #cccccc;
+
+		&:hover {
+			color: white;
+		}
+	}
 }
 
 .mfp-s-ready .mfp-preloader {
@@ -122,7 +127,8 @@
 	display: none;
 }
 
-button.mfp-close, button.mfp-arrow {
+button.mfp-close,
+button.mfp-arrow {
 	overflow: visible;
 	cursor: pointer;
 	background: transparent;
@@ -134,10 +140,11 @@ button.mfp-close, button.mfp-arrow {
 	z-index: 1046;
 	-webkit-box-shadow: none;
 	box-shadow: none;
-}
-button::-moz-focus-inner {
-	padding: 0;
-	border: 0;
+
+	&::-moz-focus-inner {
+		padding: 0;
+		border: 0;
+	}
 }
 
 .mfp-close {
@@ -156,20 +163,24 @@ button::-moz-focus-inner {
 	font-style: normal;
 	font-size: 28px;
 	font-family: Arial, Baskerville, monospace;
-}
-.mfp-close:hover, .mfp-close:focus {
-	opacity: 1;
-	filter: alpha(opacity=100);
-}
-.mfp-close:active {
-	top: 1px;
+
+	&:hover,
+	&:focus {
+		opacity: 1;
+		filter: alpha(opacity=100);
+	}
+
+	&:active {
+		top: 1px;
+	}
 }
 
 .mfp-close-btn-in .mfp-close {
 	color: #333333;
 }
 
-.mfp-image-holder .mfp-close, .mfp-iframe-holder .mfp-close {
+.mfp-image-holder .mfp-close,
+.mfp-iframe-holder .mfp-close {
 	color: white;
 	right: -6px;
 	text-align: right;
@@ -197,69 +208,90 @@ button::-moz-focus-inner {
 	width: 90px;
 	height: 110px;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
 
-.mfp-arrow:active {
-	margin-top: -54px;
-}
-.mfp-arrow:hover, .mfp-arrow:focus {
-	opacity: 1;
-	filter: alpha(opacity=100); }
-	.mfp-arrow:before, .mfp-arrow:after, .mfp-arrow .mfp-b, .mfp-arrow .mfp-a {
-	content: '';
-	display: block;
-	width: 0;
-	height: 0;
-	position: absolute;
-	left: 0;
-	top: 0;
-	margin-top: 35px;
-	margin-left: 35px;
-	border: medium inset transparent; }
-	.mfp-arrow:after, .mfp-arrow .mfp-a {
-	border-top-width: 13px;
-	border-bottom-width: 13px;
-	top: 8px; }
-	.mfp-arrow:before, .mfp-arrow .mfp-b {
-	border-top-width: 21px;
-	border-bottom-width: 21px;
-	opacity: 0.7;
+	&:active {
+		margin-top: -54px;
+	}
+
+	&:hover,
+	&:focus {
+		opacity: 1;
+		filter: alpha(opacity=100);
+	}
+
+	&:before,
+	&:after,
+	.mfp-b,
+	.mfp-a {
+		content: '';
+		display: block;
+		width: 0;
+		height: 0;
+		position: absolute;
+		left: 0;
+		top: 0;
+		margin-top: 35px;
+		margin-left: 35px;
+		border: medium inset transparent;
+	}
+
+	&:after,
+	.mfp-a {
+		border-top-width: 13px;
+		border-bottom-width: 13px;
+		top: 8px;
+	}
+
+	&:before,
+	.mfp-b {
+		border-top-width: 21px;
+		border-bottom-width: 21px;
+		opacity: 0.7;
+	}
 }
 
 .mfp-arrow-left {
 	left: 0;
-}
-.mfp-arrow-left:after, .mfp-arrow-left .mfp-a {
-	border-right: 17px solid white;
-	margin-left: 31px;
-}
-.mfp-arrow-left:before, .mfp-arrow-left .mfp-b {
-	margin-left: 25px;
-	border-right: 27px solid #3f3f3f;
+
+	&:after,
+	.mfp-a {
+		border-right: 17px solid white;
+		margin-left: 31px;
+	}
+
+	&:before, .mfp-b {
+		margin-left: 25px;
+		border-right: 27px solid #3f3f3f;
+	}
 }
 
 .mfp-arrow-right {
 	right: 0;
-}
-.mfp-arrow-right:after, .mfp-arrow-right .mfp-a {
-	border-left: 17px solid white;
-	margin-left: 39px;
-}
-.mfp-arrow-right:before, .mfp-arrow-right .mfp-b {
-	border-left: 27px solid #3f3f3f;
+
+	&:after,
+	.mfp-a {
+		border-left: 17px solid white;
+		margin-left: 39px;
+	}
+
+	&:before, .mfp-b {
+		border-left: 27px solid #3f3f3f;
+	}
 }
 
 .mfp-iframe-holder {
 	padding-top: 40px;
 	padding-bottom: 40px;
-}
-.mfp-iframe-holder .mfp-content {
-	line-height: 0;
-	width: 100%;
-	max-width: 900px;
-}
-.mfp-iframe-holder .mfp-close {
-	top: -40px;
+
+	.mfp-content {
+		line-height: 0;
+		width: 100%;
+		max-width: 900px;
+	}
+
+	.mfp-close {
+		top: -40px;
+	}
 }
 
 .mfp-iframe-scaler {
@@ -267,19 +299,20 @@ button::-moz-focus-inner {
 	height: 0;
 	overflow: hidden;
 	padding-top: 56.25%;
-}
-.mfp-iframe-scaler iframe {
-	position: absolute;
-	display: block;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
-	background: black;
+
+	iframe {
+		position: absolute;
+		display: block;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+		background: black;
+	}
 }
 
-/* Main image in popup */
+// Main image in popup
 img.mfp-img {
 	width: auto;
 	max-width: 100%;
@@ -293,32 +326,35 @@ img.mfp-img {
 	margin: 0 auto;
 }
 
-/* The shadow behind the image */
+// The shadow behind the image
 .mfp-figure {
 	line-height: 0;
-}
-.mfp-figure:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 40px;
-	bottom: 40px;
-	display: block;
-	right: 0;
-	width: auto;
-	height: auto;
-	z-index: -1;
-	box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
-	background: #444444;
-}
-.mfp-figure small {
-	color: #bdbdbd;
-	display: block;
-	font-size: 12px;
-	line-height: 14px;
-}
-.mfp-figure figure {
-	margin: 0;
+
+	&:after {
+		content: '';
+		position: absolute;
+		left: 0;
+		top: 40px;
+		bottom: 40px;
+		display: block;
+		right: 0;
+		width: auto;
+		height: auto;
+		z-index: -1;
+		box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+		background: #444444;
+	}
+
+	small {
+		color: #bdbdbd;
+		display: block;
+		font-size: 12px;
+		line-height: 14px;
+	}
+
+	figure {
+		margin: 0;
+	}
 }
 
 .mfp-bottom-bar {
@@ -347,60 +383,68 @@ img.mfp-img {
 }
 
 @media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) {
-	.mfp-img-mobile .mfp-image-holder {
-		padding-left: 0;
-		padding-right: 0;
-	}
 
-	.mfp-img-mobile img.mfp-img {
-		padding: 0;
-	}
+	.mfp-img-mobile {
 
-	.mfp-img-mobile .mfp-figure:after {
-		top: 0;
-		bottom: 0;
-	}
+		.mfp-image-holder {
+			padding-left: 0;
+			padding-right: 0;
+		}
 
-	.mfp-img-mobile .mfp-figure small {
-		display: inline;
-		margin-left: 5px;
-	}
+		img.mfp-img {
+			padding: 0;
+		}
 
-	.mfp-img-mobile .mfp-bottom-bar {
-		background: rgba(0, 0, 0, 0.6);
-		bottom: 0;
-		margin: 0;
-		top: auto;
-		padding: 3px 5px;
-		position: fixed;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-	}
+		.mfp-figure {
 
-	.mfp-img-mobile .mfp-bottom-bar:empty {
-		padding: 0;
-	}
+			&:after {
+				top: 0;
+				bottom: 0;
+			}
 
-	.mfp-img-mobile .mfp-counter {
-		right: 5px;
-		top: 3px;
-	}
+			small {
+				display: inline;
+				margin-left: 5px;
+			}
+		}
 
-	.mfp-img-mobile .mfp-close {
-		top: 0;
-		right: 0;
-		width: 35px;
-		height: 35px;
-		line-height: 35px;
-		background: rgba(0, 0, 0, 0.6);
-		position: fixed;
-		text-align: center;
-		padding: 0;
+		.mfp-bottom-bar {
+			background: rgba(0, 0, 0, 0.6);
+			bottom: 0;
+			margin: 0;
+			top: auto;
+			padding: 3px 5px;
+			position: fixed;
+			-webkit-box-sizing: border-box;
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;
+
+			&:empty {
+				padding: 0;
+			}
+		}
+
+		.mfp-counter {
+			right: 5px;
+			top: 3px;
+		}
+
+		.mfp-close {
+			top: 0;
+			right: 0;
+			width: 35px;
+			height: 35px;
+			line-height: 35px;
+			background: rgba(0, 0, 0, 0.6);
+			position: fixed;
+			text-align: center;
+			padding: 0;
+		}
 	}
 }
 
 @media all and (max-width: 900px) {
+
 	.mfp-arrow {
 		-webkit-transform: scale(0.75);
 		transform: scale(0.75);
@@ -422,28 +466,31 @@ img.mfp-img {
 	}
 }
 
-.mfp-ie7 .mfp-img {
-	padding: 0;
-}
+.mfp-ie7 {
 
-.mfp-ie7 .mfp-bottom-bar {
-	width: 600px;
-	left: 50%;
-	margin-left: -300px;
-	margin-top: 5px;
-	padding-bottom: 5px;
-}
+	.mfp-img {
+		padding: 0;
+	}
 
-.mfp-ie7 .mfp-container {
-	padding: 0;
-}
+	.mfp-bottom-bar {
+		width: 600px;
+		left: 50%;
+		margin-left: -300px;
+		margin-top: 5px;
+		padding-bottom: 5px;
+	}
 
-.mfp-ie7 .mfp-content {
-	padding-top: 44px;
-}
+	.mfp-container {
+		padding: 0;
+	}
 
-.mfp-ie7 .mfp-close {
-	top: 0;
-	right: 0;
-	padding-top: 0;
+	.mfp-content {
+		padding-top: 44px;
+	}
+
+	.mfp-close {
+		top: 0;
+		right: 0;
+		padding-top: 0;
+	}
 }
